# kobu

./: .envrc  .gitignore  README.md  flake.nix  kobu-zmk-left.uf2  kobu_left.uf2  kobu_reset.uf2  kobu_right.uf2  package.json  vite.config.ts  wrangler.jsonc
.github/workflows/: ci.yml  firmware.yml  lint.yml  web.yml  zmk-editor.yml
case/: hinji-coveor.stl  main-top-plate.stl  oyayubi-bottom-plate.stl  thumb-side-plate.stl  thumb-top-plate.stl  xiao-cover.stl
case/3mf/: 05-thumb-xiao-cover.3mf  08-main-top-plate.3mf  09-main-spacer.3mf
case/common/: power-switch.stl  reset-button.stl
case/main-unit/: main-bottom-plate.stl  main-side-plate.stl  main-unit-left-spacer-top.stl  main-unit-right-spacer-bottom1.stl  main-unit-right-spacer-bottom2.stl  main-unit-right-spacer-top.stl
case/thumb/: oyayubi-side-plate.stl  power-switch.stl  reset-button.stl  thumb-bottom-plate.stl  thumb-side-plate.stl  thumb-top-plate.stl  track-ball-case.stl  xiao-cover-left.stl  xiao-cover.stl
docs/: rmk-debug-saga-2026-06.md
firmware/: .envrc  Cargo.toml  build.rs  keyboard.toml  vial.json
firmware/.cargo/: config.toml
firmware/keymap/: kobu.yaml
firmware/rmk/: build.rs  keyboard.toml
firmware/rmk/src/: trackball.rs
firmware/scripts/: lint_keymap_config.py
firmware/src/: battery_led.rs  central.rs  central_test.rs  config.rs  mixed_matrix.rs  peripheral.rs  peripheral_led.rs  scroll_processor.rs  status_led.rs  trackball.rs
firmware/zmk/: .envrc  .gitignore  README.md
firmware/zmk/config/: kobu.keymap
firmware/zmk/config/boards/shields/kobu/: Kconfig.defconfig  Kconfig.shield  kobu.zmk.yml  kobu_left.conf  kobu_left.overlay  kobu_right.conf  kobu_right.overlay
firmware/zmk/modules/zmk-pmw3610-driver/: Kconfig
firmware/zmk/modules/zmk-pmw3610-driver/src/: pixart.h  pmw3610.c
firmware/zmk/zephyr/: module.yml
pcb/main-unit-left/: main-unit-left.kicad_pro
pcb/main-unit-right/: main-unit-right.kicad_pcb  main-unit-right.kicad_pro
pcb/thumb-unit-left/: thumb-unit-left.kicad_pcb  thumb-unit-left.kicad_sch
pcb/thumb-unit-right/: oyayubi-side-plate.stl  thumb-unit-right.kicad_pcb  thumb-unit-right.kicad_prl  thumb-unit-right.kicad_pro
scripts/: zmk-apply-overrides.py
src/: index.css  main.tsx
src/components/: ConnectButton.test.tsx
src/protocol/: handshake.ts  keymap.ts  unlock.test.ts
v1/: README.md  kobu-zmk-reset.uf2
v1/scripts/: zmk-apply-overrides.py
v2/: README.md
v2/case/: hinji-cover.stl  main-bottom-plate.3mf  main-bottom-plate.stl  main-side-plate.3mf  main-side-plate.stl  main-top-plate-v1.stl  main-top-plate.stl  main-top.dxf  thumb-bottom-plate.stl  thumb-side-plate.stl  thumb-top-plate.stl  thumb-top.dxf  trabo-case.stl  xiao-cover.stl
v2/pcb/: main-top-kicad.dxf  thumb-top.dxf
web/: .envrc  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  wrangler.jsonc
web/rmk-editor/: .envrc  README.md  preview-physical.html  tsconfig.worker.json  wrangler.jsonc
web/src/: App.tsx
(+303 files in other folders)
